--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="src/assets/favicon/favicon.ico"/> 
     <title>my-trioapp</title>
   </head>
   <body>
